--- a/MindBridgeClient/package.json
+++ b/MindBridgeClient/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
+    "expo-constants": "~9.1.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -25,6 +26,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "9.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
