--- a/MindBridgeWebEditor/package.json
+++ b/MindBridgeWebEditor/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-editor",
-  "version": "0.1.0",
+  "name": "mind-bridge-survey-editor",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
