--- a/MindBridgeClient/package.json
+++ b/MindBridgeClient/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
+    "expo-file-system": "~9.0.1",
+    "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -28,7 +30,8 @@
     "react-native-web": "~0.11.7",
     "react-native-webview": "9.4.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
