Integrate GoogleOpenId Service and fetching

--- a/MindBridgeClient/app.json
+++ b/MindBridgeClient/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "마음다리",
-    "slug": "MindBridgeClient",
+    "slug": "MindBridgeApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,7 +23,13 @@
       "favicon": "./assets/favicon.png"
     },
     "android": {
-      "package": "com.dgsw.mindbridge"
+      "package": "com.dgsw.mindbridgeapp",
+      "config": {
+        "googleSignIn": {
+          "apiKey": "AIzaSyAYdYkZB3sPkjayg1e6E41-G-KNkw9qAJk",
+          "certificateHash": "CF92CC640B62B59D7439D2357ED87E27523C33EA"
+        }
+      }
     }
   }
 }
