--- a/MindBridgeClient/package.json
+++ b/MindBridgeClient/package.json
@@ -8,12 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-file-system": "~9.0.1",
+    "expo-google-app-auth": "^8.1.2",
+    "expo-google-sign-in": "~8.2.1",
     "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
