--- a/MindBridgeClient/tsconfig.json
+++ b/MindBridgeClient/tsconfig.json
@@ -8,5 +8,7 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
   }
 }
