--- a/MindBridgeClient/package.json
+++ b/MindBridgeClient/package.json
@@ -13,16 +13,20 @@
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
+    "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
     "expo-file-system": "~9.0.1",
     "expo-google-app-auth": "^8.1.2",
     "expo-google-sign-in": "~8.2.1",
+    "expo-screen-orientation": "~1.1.1",
     "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "punycode": "^2.1.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-markdown-renderer": "^3.2.8",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
@@ -38,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@expo/metro-config": "^0.1.21",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-redux": "^7.1.9",
