--- a/MindBridgeClient/package.json
+++ b/MindBridgeClient/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.2",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "expo": "~38.0.8",
