--- a/MindBridgeClient/package.json
+++ b/MindBridgeClient/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "@types/jwt-decode": "^2.2.1",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
@@ -23,6 +24,7 @@
     "expo-screen-orientation": "~1.1.1",
     "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "jwt-decode": "^2.2.0",
     "punycode": "^2.1.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
