--- a/MindBridgeClient/package.json
+++ b/MindBridgeClient/package.json
@@ -24,6 +24,7 @@
     "expo-screen-orientation": "~1.1.1",
     "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "expo-web-browser": "~8.3.1",
     "jwt-decode": "^2.2.0",
     "punycode": "^2.1.1",
     "react": "~16.11.0",
