GoogleSignIn 관련 업데이트

--- a/MindBridgeClient/app.json
+++ b/MindBridgeClient/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "알콩달콩",
     "slug": "MindBridgeApp",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -17,14 +17,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.dgsw.mindbridgeapp",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "android": {
       "package": "com.dgsw.mindbridgeapp",
-      "versionCode": 6,
+      "versionCode": 7,
       "googleServicesFile": "./google-services.json"
     }
   }
