--- a/MindBridgeClient/app.json
+++ b/MindBridgeClient/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "알콩달콩",
     "slug": "MindBridgeApp",
-    "version": "1.0.8",
+    "version": "1.1.7",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -19,6 +19,11 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.dgsw.mindbridgeapp",
+      "config": {
+        "googleSignIn": {
+          "reservedClientId": "com.googleusercontent.apps.500481310176-gu72541ovsjhr5crlt9dcu78fc52k0t5"
+        }
+      },
       "googleServicesFile": "./GoogleService-Info.plist"
     },
     "web": {
